Add rubocop and rspec to travis (#3)

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,26 @@ language: ruby
 rvm:
   - 2.3.1
 
+services:
+  - postgresql
+  - redis-server
+
 script:
   - bundle exec rubocop app spec -R --format simple
+
+before_install:
+  - "echo '--colour' > ~/.rspec"
+  - "echo 'gem: --no-document' > ~/.gemrc"
+
+before_script:
+  - psql -c "CREATE USER \"wbooks-api\" WITH PASSWORD 'wbooks-api';" -U postgres
+  - psql -c "DROP DATABASE IF EXISTS \"WbooksApi_test\";" -U postgres
+  - psql -c "CREATE DATABASE \"WbooksApi_test\" ENCODING 'utf8';" -U postgres
+  - bundle exec rake db:migrate test:prepare
+
+script:
+  - bundle exec rspec spec -fd
+  - bundle exec rubocop app spec -R --format simple
+
+cache:
+  bundler: true
