Add Authentication controller for Users (#9)
* Add verification code to users and Session API
  Adds routes and controllers for session API
  Adds jwt and versionist as dependencies for Session API
  Adds an attribute to User model for auth codes.

* Add helper classes for authentication

* Fix User creation adding verification_code before creation

* Fix Sessions controller and add tests
  Also adds a helper for JSON responses parsing.

* Add rubocop exception for spec/rails_helper.rb
  Based on
  https://github.com/Wolox/rails-bootstrap/blob/master/.rubocop.yml

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,3 +2,7 @@ Documentation:
   Enabled: false
 LineLength:
   Max: 99
+AllCops:
+  Exclude:
+    - spec/support/spec_helper.rb
+    - spec/rails_helper.rb
