Add #index and #show for Book (#11)
* Add BooksController with #show and #index
  Uses ActiveModelSerializer for the JSON conversion, so this
  comes as a dependency.
* Differentiate serializers for #show and #index
  Only #show will render the actual rent for the given book
* Add tests cases for BookController
* Modify rubocop to ignore block length on tests
* Changed Book#show to return null if no actual_rent is found
* Moved book filter logic to Filterable concern

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,7 @@ AllCops:
   Exclude:
     - spec/support/spec_helper.rb
     - spec/rails_helper.rb
+
+Metrics/BlockLength:
+  Exclude:
+    - spec/**/*.rb
